package model;

public class BladMiejsce extends Exception{

}
