package model;

public interface Obserwator {

    public void inform();

}