@startuml

title __PROJEKT's Class Diagram__\n

  package model {
    class Bilet {
    }
  }
  

  package model {
    class BladMiejsce {
    }
  }
  

  package model {
    class BladWiek {
    }
  }
  

  package model {
    class ListaOrganizatorów {
    }
  }
  

  package model {
    class Main {
    }
  }
  

  package model {
    interface Obserwator {
    }
  }
  

  package model {
    interface Obserwowany {
    }
  }
  

  package model {
    class Organizator {
    }
  }
  

  package model {
    class Sala {
    }
  }
  

  package model {
    class Wydarzenie {
    }
  }
  

  package model {
    class Zespół {
    }
  }
  

  package gui {
    class bilet {
    }
  }
  

  package gui {
    class organizator_events {
    }
  }
  

  package gui {
    class organizator_form {
    }
  }
  

  package gui {
    class organizator_login {
    }
  }
  

  package gui {
    class witamyGUI {
    }
  }
  

  Organizator -up-|> Runnable
  Organizator -up-|> Obserwowany
  Organizator o-- Obserwator : obserwator
  Wydarzenie o-- Sala : sala
  Wydarzenie o-- Zespół : zespół
  bilet o-- Wydarzenie : wydarzenie
  bilet o-- ListaOrganizatorów : listaOrganizatorów
  bilet o-- Organizator : organizator
  organizator_events -up-|> Obserwator
  organizator_events o-- Organizator : organizator
  organizator_events o-- ListaOrganizatorów : lista
  organizator_events o-- Zespół : zespol
  organizator_events o-- Sala : sala
  organizator_events o-- Obserwator : obserwator
  organizator_form o-- Organizator : organizator
  organizator_form o-- Wydarzenie : wydarzenie
  organizator_form o-- Sala : sala
  organizator_form o-- Zespół : zespół
  organizator_form o-- ListaOrganizatorów : lista
  organizator_login o-- ListaOrganizatorów : lista
  witamyGUI o-- ListaOrganizatorów : lista


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
